--- a/test/rook/osd_on_pvc/cluster.yaml
+++ b/test/rook/osd_on_pvc/cluster.yaml
@@ -1,8 +1,8 @@
 apiVersion: ceph.rook.io/v1
 kind: CephCluster
 metadata:
-  name: rook-ceph
-  namespace: rook-ceph
+  name: ceph-for-cs
+  namespace: ceph-for-cs
 spec:
   dataDirHostPath: /var/lib/rook
   mon:
