--- a/rook/base/upstream/operator.yaml
+++ b/rook/base/upstream/operator.yaml
@@ -243,8 +243,8 @@ spec:
         #       key: node-role.kubernetes.io/etcd
         #       operator: Exists
         # Configure CSI cephfs grpc and liveness metrics port
-        #- name: CSI_CEPHFS_GRPC_METRICS_PORT
-        #  value: "9091"
+        - name: CSI_CEPHFS_GRPC_METRICS_PORT
+          value: "9092"
         #- name: CSI_CEPHFS_LIVENESS_METRICS_PORT
         #  value: "9081"
         # Configure CSI rbd grpc and liveness metrics port
