--- a/folding-at-home/daemonset.yaml
+++ b/folding-at-home/daemonset.yaml
@@ -7,7 +7,7 @@ globalDefault: false
 description: "This priority class should be used for low priority fah pods only."
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: DaemonSet
 metadata:
   namespace: folding-at-home
   name: folding-at-home
@@ -17,7 +17,6 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: folding-at-home
-  replicas: 20 # Set number of replicas to run - one replica per node
   template:
     metadata:
       labels:
@@ -26,16 +25,6 @@ spec:
       securityContext:
         runAsUser: 105 # fahclient(=105)
         runAsGroup: 105
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: app.kubernetes.io/name
-                    operator: In
-                    values:
-                      - folding-at-home
-              topologyKey: "kubernetes.io/hostname"
       initContainers:
         - name: copy-config
           image: richstokes20/fah-covid:latest
