[ci skip] folding-at-home: limit computing on cs nodes
Signed-off-by: Daichi Sakaue <daichi-sakaue@cybozu.co.jp>

--- a/folding-at-home/daemonset.yaml
+++ b/folding-at-home/daemonset.yaml
@@ -22,6 +22,8 @@ spec:
       labels:
         app.kubernetes.io/name: folding-at-home
     spec:
+      nodeSelector:
+        cke.cybozu.com/role: cs
       securityContext:
         runAsUser: 105 # fahclient(=105)
         runAsGroup: 105
