--- a/test/rook/toolbox.yaml
+++ b/test/rook/toolbox.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rook-ceph-tools
-  namespace: rook-ceph
+  namespace: ceph-for-ss
   labels:
     app: rook-ceph-tools
 spec:
