[ci skip] rook: fix namespace.
Signed-off-by: morimoto-cybozu <kenji_morimoto@cybozu.co.jp>

--- a/test/rook/object_bucket/storageclass.yaml
+++ b/test/rook/object_bucket/storageclass.yaml
@@ -7,6 +7,6 @@ metadata:
 provisioner: ceph.rook.io/bucket
 parameters:
   objectStoreName: my-store
-  objectStoreNamespace: rook-ceph
+  objectStoreNamespace: ceph-for-ss
   region: us-west-1
 reclaimPolicy: Delete
