--- a/test/rook/ceph-for-cs/cephblockpool.yaml
+++ b/test/rook/ceph-for-cs/cephblockpool.yaml
@@ -29,6 +29,8 @@ parameters:
     # The secrets contain Ceph admin credentials.
     csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
     csi.storage.k8s.io/provisioner-secret-namespace: ceph-for-cs
+    csi.storage.k8s.io/controller-expand-secret-name: rook-csi-rbd-provisioner
+    csi.storage.k8s.io/controller-expand-secret-namespace: ceph-for-cs
     csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
     csi.storage.k8s.io/node-stage-secret-namespace: ceph-for-cs
 
@@ -36,5 +38,6 @@ parameters:
     # will set default as `ext4`.
     csi.storage.k8s.io/fstype: xfs
 
+allowVolumeExpansion: true
 # Delete the rbd volume when a PVC is deleted
 reclaimPolicy: Delete
